<resources>
    <string name="app_name">Exercise 1</string>
    <string name="newtask_savetask">Save task</string>
    <string name="no_tasks_to_show">No tasks to show</string>
    <string name="tv_task_importance_text">Enter task importance:</string>
    <string name="et_newtask_summary_hint">Do OSC homework, all of the exercises</string>
    <string name="tv_newtask_summary_text">Enter task summary:</string>
    <string name="et_newtask_title_hint">Finish homework</string>
    <string name="tv_newtask_title_text">Enter task title:</string>
    <string name="et_newtask_imporance_hint">1</string>
</resources>
